--- a/css/controls.css
+++ b/css/controls.css
@@ -37,7 +37,7 @@
   text-decoration: none;
   display: block;
   box-sizing: border-box;
-  color: white;
+  color: red;
   border: 1px solid #7d7d7d;
   background-color: #7d7d7d;
   -webkit-touch-callout: none;
